Implemented Beghouled and I'Zombie minigames